# reclameai

./: README.md  glue_reclameaipy
reclameai/: .gitignore  README.md  pyproject.toml  requirements.txt
reclameai/conf/: logging.yml
reclameai/conf/base/: catalog.yml  parameters.yml
reclameai/notebooks/: nps_classification.ipynb  reclamacoes_classificadas.csv
reclameai/src/reclameai/: __init__.py  __main__.py  files_util.py  lambda_function.py  openai_util.py  parameters.yaml  prompt_util.py  secreats_util.py  settings.py  table_scripts.txt  test_lambda.py  utils.py
reclameai/src/reclameai/pipelines/openai_classification/: __init__.py  nodes.py  openai_util.py  pipeline.py  prompt_util.py
reclameai/tests/pipelines/openai_classification/: test_pipeline.py
